# ComfyUI-Chinese-CLIP

./: .gitignore  ComfyUI-Chinese-CLIP.py  README.md  TransCode.py  __init__.py  nodes.py  pyproject.toml
.github/workflows/: publish.yml
