[project]
name = "ComfyUI-Chinese-CLIP"
description = "支持直接在CLIP文本框中输入汉字，底层会自动翻译为英文，同时标点也会替换成英文（Support for input Chinese prompt）。"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["translate"]

[project.urls]
Repository = "https://github.com/leeneo/ComfyUI-Chinese-CLIP"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ComfyUI-Chinese-CLIP"
DisplayName = "ComfyUI-Chinese-CLIP"
Icon = ""
