[project]
name = "ComfyUI-Chinese-CLIP"
description = "Support for directly inputting Chinese characters in the CLIP text box. The system will automatically translate them into English and replace the punctuation marks as well."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["translate"]

[project.urls]
Repository = "https://github.com/leeneo/ComfyUI-Chinese-CLIP"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "leeneo"
DisplayName = "ComfyUI-Chinese-CLIP"
Icon = ""
